--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Logithèque apprendre 5 minutes" />
 		<meta property="og:description" content="Logiciels 100% gratuit : Quiz pour tester ses connaissances, convertisseurs et calculatrices en ligne scientifiques et mathématiques, pour calculer facilement."/>
-		<meta property="og:url" content="https://github.com/apprendre5minutes/logitheque/blob/main/" />
-		<meta property="og:image" content="https://github.com/apprendre5minutes/logitheque/blob/main/images/icone-apprendre5minutes.png"/>
+		<meta property="og:url" content="https://apprendre5minutes.github.io/logitheque/" />
+		<meta property="og:image" content="https://apprendre5minutes.github.io/logitheque/images/icone-apprendre5minutes.png"/>
 		<meta property="og:site_name" content="Logithèque apprendre 5 minutes" />
 		<meta property="og:locale" content="fr_FR" />
 
-                                    <link rel="icon" type="image/png" sizes="16x16" href="images/icone-apprendre5minutes.png">
+                <link rel="icon" type="image/png" sizes="16x16" href="https://apprendre5minutes.github.io/logitheque/images/icone-apprendre5minutes.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="assets/css/apprendre5minutes.css" />
