--- a/calculatrice-hypotenuse.html
+++ b/calculatrice-hypotenuse.html
@@ -13,12 +13,12 @@
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Calculatrice hypoténuse" />
 		<meta property="og:description" content="Calculatrice hypoténuse. Calcul de l'hypoténuse d'un triangle rectangle facile avec notre calculatrice dédiée."/>
-		<meta property="og:url" content="https://github.com/apprendre5minutes/logitheque/blob/main/calculatrice-hypotenuse.html" />
-		<meta property="og:image" content="https://github.com/apprendre5minutes/logitheque/blob/main/images/icone-apprendre5minutes.png"/>
+		<meta property="og:url" content="https://apprendre5minutes.github.io/logitheque/logitheque/calculatrice-hypotenuse.html" />
+		<meta property="og:image" content="https://apprendre5minutes.github.io/logitheque/images/icone-apprendre5minutes.png"/>
 		<meta property="og:site_name" content="Logithèque apprendre 5 minutes" />
 		<meta property="og:locale" content="fr_FR" />
 
-                                    <link rel="icon" type="image/png" sizes="16x16" href="images/icone-apprendre5minutes.png">
+                                    <link rel="icon" type="image/png" sizes="16x16" href="https://apprendre5minutes.github.io/logitheque/images/icone-apprendre5minutes.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="assets/css/apprendre5minutes.css" />
